--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="digits_caption">To try recognition of digits: say something like \"one two three four five\".</string>
     <string name="forecast_caption">To try recognition of a weather forecast like \"sunny spells on Wednesday\".</string>
     <string name="phone_caption">To try phonetic recognition say anything.</string>
+    <string name="instruction_navigator"><![CDATA[Чтобы включить\n Яндекс.Навигатор\n произнесите: \n\n Включи приложение =>\n навигатор]]></string>
+    <string name="instruction_panel"><![CDATA[Чтобы включить\n Панель управления\n произнесите: \n\n Включи приложение =>\n панель]]></string>
 </resources>
