--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,12 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
     <string name="app_name">PocketSphinx Demo</string>
-    
+
     <string name="kws_caption">Для начала демонстрации скажите \"великий компютер\".</string>
     <string name="menu_caption">Скажите \"цифры\", \"словарь\" or \"звуки\" чтобы выбрать грамматическу, языковую модель или пример фонетичского декодирования.</string>
     <string name="digits_caption">To try recognition of digits: say something like \"one two three four five\".</string>
     <string name="forecast_caption">To try recognition of a weather forecast like \"sunny spells on Wednesday\".</string>
     <string name="phone_caption">To try phonetic recognition say anything.</string>
+    <string name="instruction_navigator"><![CDATA[Чтобы включить\n Яндекс.Навигатор\n произнесите: \n\n Включи приложение =>\n навигатор]]></string>
+    <string name="instruction_panel"><![CDATA[Чтобы включить\n Панель управления\n произнесите: \n\n Включи приложение =>\n панель]]></string>
 </resources>
